--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
     <link href="chrome-extension://eanggfilgoajaocelnaflolkadkeghjp/nj.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     </head>
-      <body style="background-image: url(bg2.avif);background-size:contain;";>
+      <body>
 <nav class="navbar navbar-expand-lg   bg-body-tertiary" >
    <div class="container-fluid  " style="background-color: black;">
      <a class="navbar-brand" href="#" style="color: white;"><b>Portfolio</b></a>
@@ -52,7 +52,7 @@
 </nav> 
 
 
-<div class="container position-relative z-5 text-center pb-5 pt-5 mt-lg-4 mt-xl-5" ; background-size: cover; height: 500px; width: auto;>
+<div class="container position-relative z-5 text-center pb-5 pt-5 mt-lg-4 mt-xl-5" ;  style="background-image: url(bg2.avif);background-size: cover; height: 500px; width: auto;">
   <h2 class="display-1 pt-4 mt-sm-3 text-white"> 
     <span class="fw-normal" style="font-size: 90px; padding-left: 100px;">Hi I'm </span> 
 </h2>
@@ -69,7 +69,7 @@
  </div>
  <br>
 
- <section class="overflow-hidden pb-5 pt-5 text-center"  > 
+ <section class="overflow-hidden pb-5 pt-5 text-center"  style="background-image: url(bg2.avif);background-size:contain;"; > 
   <div class="container pb-sm-3 mb-md-2 mb-lg-3" > 
       <div class="row g-4 justify-content-center" > 
           <div class="col-md-7 aos-init aos-animate" data-aos="fade-right" data-aos-duration="600" data-aos-offset="280" data-disable-parallax-down="md" style="background-color: #f3f3f3;">
