--- a/portfolio.html
+++ b/portfolio.html
@@ -52,7 +52,7 @@
 </nav> 
 
 
-<div class="container position-relative z-5 text-center pb-5 pt-5 mt-lg-4 mt-xl-5" ;  style="background-image: url(bg2.avif);background-size: cover; height: 500px; width: auto;">
+<div class="container position-relative z-5 text-center pb-5 pt-5 mt-lg-4 mt-xl-5" ;  style="background-image: url(bg2.avif);background-size: contain; height: 500px; width: auto;">
   <h2 class="display-1 pt-4 mt-sm-3 text-white"> 
     <span class="fw-normal" style="font-size: 90px; padding-left: 100px;">Hi I'm </span> 
 </h2>
