--- a/portfolio.html
+++ b/portfolio.html
@@ -28,13 +28,13 @@
      <div class="collapse navbar-collapse" id="navbarSupportedContent">
        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
          <li class="nav-item">
-           <a class="nav-link active" aria-current="page" href="#" style="color: white";><b>Home</b></a>
+           <a class="nav-link active" aria-current="page" href="#main" style="color: white";><b>Home</b></a>
          </li>
          <li class="nav-item">
-           <a class="nav-link" href="#" style="color: white;"> <b> About</b></a>
+           <a class="nav-link" href="#about" style="color: white;"> <b> About</b></a>
          </li>
          <li class="nav-item dropdown">
-           <a class="nav-link dropdown-toggle" href="" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color: white;">
+           <a class="nav-link dropdown-toggle" href="project" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color: white;">
              <b>My Projects</b>
            </a>
            <ul class="dropdown-menu">
@@ -52,7 +52,7 @@
 </nav> 
 
 
-<div class="container position-relative z-5 text-center pb-5 pt-5 mt-lg-4 mt-xl-5" ;  style="background-image: url(bg2.avif);background-size: cover; height:500px;width:auto">
+<div class="container  position-relative z-5 text-center pb-5 pt-5 mt-lg-4 mt-xl-5" id="main"  style="background-image: url(bg2.avif);background-size: cover; height:500px;width:auto">
   <h2 class="display-1 pt-4 mt-sm-3 text-white"> 
     <span class="fw-normal" style="font-size: 90px; padding-left: 100px;">Hi I'm </span> 
 </h2>
@@ -74,7 +74,7 @@
       <div class="row g-4 justify-content-center" > 
           <div class="col-md-7 aos-init aos-animate" data-aos="fade-right" data-aos-duration="600" data-aos-offset="280" data-disable-parallax-down="md" style="background-color: #f3f3f3;">
               </div>
-          <div class="col-md-5 aos-init aos-animate" data-aos="fade-left" data-aos-duration="600" data-aos-offset="280" data-disable-parallax-down="md" style="width: 900px;" style="background-color: #f3f3f3;">
+          <div class="col-md-5 aos-init aos-animate" data-aos="fade-left" data-aos-duration="600" data-aos-offset="280" data-disable-parallax-down="md" id="about" style="width: 900px;" style="background-color: #f3f3f3;">
               <div class="d-flex flex-column h-100 bg-secondary rounded-3 py-5 px-4 px-lg-5" style="background-color: #f3f3f3;">
                   <h2 class="mb-xl-4">About Me</h2>
                   <p class="mb-4 mb-xl-5" style="text-align:justify;">A highly skilled Computer Science Engineering student proficient in C, Python, HTML, and CSS. Expert in problem-solving, algorithmic thinking, and building dynamic websites with WordPress. Adept at creating efficient, scalable code and designing seamless, responsive web interfaces. Constantly evolving with the latest technologies to deliver innovative, high-performance solutions.</p>
