--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
       <body>
 <nav class="navbar navbar-expand-lg   bg-body-tertiary" >
    <div class="container-fluid  " style="background-color: black;">
-     <a class="navbar-brand" href="#" style="color: white;"><b>Portfolio</b></a>
+     <a class="navbar-brand" href="#main" style="color: white;"><b>Portfolio</b></a>
      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
        <span class="navbar-toggler-icon"></span>
      </button>
@@ -34,7 +34,7 @@
            <a class="nav-link" href="#about" style="color: white;"> <b> About</b></a>
          </li>
          <li class="nav-item dropdown">
-           <a class="nav-link dropdown-toggle" href="project" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color: white;">
+           <a class="nav-link dropdown-toggle" href="#project" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color: white;">
              <b>My Projects</b>
            </a>
            <ul class="dropdown-menu">
