--- a/portfolio.html
+++ b/portfolio.html
@@ -51,8 +51,8 @@
    </div>
 </nav> 
 
-
-<div class="container  position-relative z-5 text-center pb-5 pt-5 mt-lg-4 mt-xl-5" id="main"  style="background-image: url(bg2.avif);background-size: cover; height:500px;width:auto">
+<div class="backgrnd"  style="background-image: url(bg2.avif);background-size:contain;";>
+<div class="container  position-relative z-5 text-center pb-5 pt-5 mt-lg-4 mt-xl-5" id="main" >
   <h2 class="display-1 pt-4 mt-sm-3 text-white"> 
     <span class="fw-normal" style="font-size: 90px; padding-left: 100px;">Hi I'm </span> 
 </h2>
@@ -69,7 +69,7 @@
  </div>
  <br>
 
- <section class="overflow-hidden pb-5 pt-5 text-center"  style="background-image: url(bg2.avif);background-size:cover;"; > 
+ <section class="overflow-hidden pb-5 pt-5 text-center" ; > 
   <div class="container pb-sm-3 mb-md-2 mb-lg-3" > 
       <div class="row g-4 justify-content-center" > 
           <div class="col-md-7 aos-init aos-animate" data-aos="fade-right" data-aos-duration="600" data-aos-offset="280" data-disable-parallax-down="md" style="background-color: #f3f3f3;">
