--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,7 @@
    </div>
 </nav> 
 
-<div class="backgrnd"  style="background-image: url(bg2.avif);background-size:contain;";>
+<div class="backgrnd"  style="background-image: url(bg2.avif);background-size:cover;";>
 <div class="container  position-relative z-5 text-center pb-5 pt-5 mt-lg-4 mt-xl-5" id="main" >
   <h2 class="display-1 pt-4 mt-sm-3 text-white"> 
     <span class="fw-normal" style="font-size: 90px; padding-left: 100px;">Hi I'm </span> 
@@ -103,6 +103,7 @@
       </div>
   </div>
 </section>
+   </div>
 
  <section id="project" style="background-color: black;">
   <div class="container px-4 py-5" id="custom-cards">
