--- a/portfolio.html
+++ b/portfolio.html
@@ -1,97 +1,108 @@
 <!doctype html>
 <html>
   <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
-  <link href="chrome-extension://eanggfilgoajaocelnaflolkadkeghjp/nj.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-</head>
-<body>
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid" style="background-color: black;">
-      <a class="navbar-brand" href="#main" style="color: white;"><b>Portfolio</b></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#main" style="color: white;"><b>Home</b></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#about" style="color: white;"><b>About</b></a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#project" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color: white;">
-              <b>My Projects</b>
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="https://certifusionstudios.com">CreatiFusion Studios</a></li>
-              <li><a class="dropdown-item" href="https://wolfarmgroup.com/">Wolfram Groups</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="https://yebsys.com">Yebsys</a></li>
-            </ul>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+      <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
+    <link href="chrome-extension://eanggfilgoajaocelnaflolkadkeghjp/nj.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    </head>
+      <body>
+<nav class="navbar navbar-expand-lg   bg-body-tertiary" >
+   <div class="container-fluid  " style="background-color: black;">
+     <a class="navbar-brand" href="#main" style="color: white;"><b>Portfolio</b></a>
+     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+       <span class="navbar-toggler-icon"></span>
+     </button>
+     <div class="collapse navbar-collapse" id="navbarSupportedContent">
+       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+         <li class="nav-item">
+           <a class="nav-link active" aria-current="page" href="#main" style="color: white";><b>Home</b></a>
+         </li>
+         <li class="nav-item">
+           <a class="nav-link" href="#about" style="color: white;"> <b> About</b></a>
+         </li>
+         <li class="nav-item dropdown">
+           <a class="nav-link dropdown-toggle" href="#project" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color: white;">
+             <b>My Projects</b>
+           </a>
+           <ul class="dropdown-menu">
+             <li><a class="dropdown-item" href="https://certifusionstudios.com">CreatiFusion Studios</a></li>
+             <li><a class="dropdown-item" href="https://wolfarmgroup.com/">Wolfram Groups</a></li>
+             <li><hr class="dropdown-divider"></li>
+             <li><a class="dropdown-item" href="https://yebsys.com">Yebsys</a></li>
+           </ul>
+         </li>
+        
+       </ul>
+       </form>
+     </div>
+   </div>
+</nav> 
 
-  <div class="backgrnd" style="background-image: url(bg2.avif); background-size: cover;">
-    <div class="container position-relative z-5 text-center pb-5 pt-5 mt-lg-4 mt-xl-5" id="main">
-      <h2 class="display-1 pt-4 mt-sm-3 text-white">
-        <span class="fw-normal" style="font-size: 90px; padding-left: 100px;">Hi I'm</span>
-      </h2>
-      <h1 class="text-body text-white pb-5"></h1>
-      <h1 style="color: #fff; font-size: 80px;">LAKSHIYA D</h1><br>
-      <h2 style="color: white; font-size: 30px;"> B.E Computer Science and Engineering Student.<br><br>
-        Aspiring Software Engineer | Passionate Coder | Problem Solver
-      </h2>
+<div class="backgrnd"  style="background-image: url(bg2.avif);background-size:cover;";>
+<div class="container  position-relative z-5 text-center pb-5 pt-5 mt-lg-4 mt-xl-5" id="main" >
+  <h2 class="display-1 pt-4 mt-sm-3 text-white"> 
+    <span class="fw-normal" style="font-size: 90px; padding-left: 100px;">Hi I'm </span> 
+</h2>
+
+     <h1 class="text-body text-white pb-5"></h1>
+     <h1 pb-5 style="color: #fff;"><span class="fw-normal" style="font-size: 80px; justify-content: center;">LAKSHIYA D</h1><br>
+   
+    <h2  pt-5 style="color:white;  font-size: 30px;" > B.E Computer Science and Engineering Student.<br>
       <br>
-      <a href="https://www.canva.com/design/DAGT2aVud08/4tsYiFxQuylpEj8pxtcjMA/edit" class="btn btn-primary">VIEW CV</a>
-    </div>
-  </div>
-  
-  <section class="overflow-hidden pb-5 pt-5 text-center">
-    <div class="container pb-sm-3 mb-md-2 mb-lg-3">
-      <div class="row g-4 justify-content-center">
-        <div class="col-md-7 aos-init aos-animate" data-aos="fade-right" data-aos-duration="600" data-aos-offset="280" style="background-color: #f3f3f3;"></div>
-        <div class="col-12 col-md-5 aos-init aos-animate" data-aos="fade-left" data-aos-duration="600" data-aos-offset="280" id="about">
-          <div class="d-flex flex-column h-100 bg-secondary rounded-3 py-5 px-4 px-lg-5" style="background-color: #f3f3f3;">
-            <h2 class="mb-xl-4">About Me</h2>
-            <p class="mb-4 mb-xl-5" style="text-align: justify;">
-              A highly skilled Computer Science Engineering student proficient in C, Python, HTML, and CSS. Expert in problem-solving, algorithmic thinking, and building dynamic websites with WordPress. Adept at creating efficient, scalable code and designing seamless, responsive web interfaces. Constantly evolving with the latest technologies to deliver innovative, high-performance solutions.
-            </p>
-            <ul class="list-unstyled mb-4 mb-xl-5" style="text-align: justify;">
-              <li class="d-flex pb-2 mb-1" style="width: fit-content;">
-                <span class="bg-info mt-2 me-2" style="width: 10px; height: 10px; border-radius: 2px;"></span>
-                <b>Current Role:</b> Computer Science Engineering (CSE) student with a strong foundation in programming and software development.
-              </li>
-              <li class="d-flex pb-2 mb-1">
-                <span class="bg-info mt-2 me-2" style="width: 10px; height: 10px; border-radius: 2px;"></span>
-                <b>Passion:</b> Dedicated to building innovative solutions and improving user experiences through technology.
-              </li>
-              <li class="d-flex pb-2 mb-1">
-                <span class="bg-info mt-2 me-2" style="width: 10px; height: 10px; border-radius: 2px;"></span>
-                <b>Web Development:</b> Skilled in designing responsive websites using WordPress and front-end technologies.
-              </li>
-              <li class="d-flex pb-2 mb-1">
-                <span class="bg-info mt-2 me-2" style="width: 10px; height: 10px; border-radius: 2px;"></span>
-                <b>Creative Mind:</b> Blending logic and creativity to develop seamless, user-centric solutions.
-              </li>
-            </ul>
-            <div class="mt-auto"></div>
+      Aspiring Software Engineer | Passionate Coder | Problem Solver
+    </h2>
+   
+    <br><button class="btn btn-primary" href="https://www.canva.com/design/DAGT2aVud08/4tsYiFxQuylpEj8pxtcjMA/edit">VIEW CV</button>
+ </div>
+ <br>
+
+ <section class="overflow-hidden pb-5 pt-5 text-center" ; > 
+  <div class="container pb-sm-3 mb-md-2 mb-lg-3" > 
+      <div class="row g-4 justify-content-center" > 
+          <div class="col-md-7 aos-init aos-animate" data-aos="fade-right" data-aos-duration="600" data-aos-offset="280" data-disable-parallax-down="md" style="background-color: #f3f3f3;">
+              </div>
+          <div class="col-md-5 aos-init aos-animate" data-aos="fade-left" data-aos-duration="600" data-aos-offset="280" data-disable-parallax-down="md" id="about" style="width: 900px;" style="background-color: #f3f3f3;">
+              <div class="d-flex flex-column h-100 bg-secondary rounded-3 py-5 px-4 px-lg-5" style="background-color: #f3f3f3;">
+                  <h2 class="mb-xl-4">About Me</h2>
+                  <p class="mb-4 mb-xl-5" style="text-align:justify;">A highly skilled Computer Science Engineering student proficient in C, Python, HTML, and CSS. Expert in problem-solving, algorithmic thinking, and building dynamic websites with WordPress. Adept at creating efficient, scalable code and designing seamless, responsive web interfaces. Constantly evolving with the latest technologies to deliver innovative, high-performance solutions.</p>
+                  <ul class="list-unstyled mb-4 mb-xl-5" style="text-align:justify;">
+                      <li class="d-flex pb-2 mb-1" style="width:fit-content;">
+                          <span class="bg-info mt-2 me-2" style="width:10px; height: 10px; border-radius: 2px;"></span>
+                          <b>Current Role:</b>Computer Science Engineering (CSE) student with a strong foundation in programming and software development.
+                      </li>
+                      <li class="d-flex pb-2 mb-1" style="text-align:justify;">
+                          <span class="bg-info mt-2 me-2" style="width:10px; height: 10px; border-radius: 2px;"></span>
+                          <b>Passion:</b> Dedicated to building innovative solutions and improving user experiences through technology.
+                      </li>
+                      <li class="d-flex pb-2 mb-1"style="text-align:justify;">
+                          <span class="bg-info mt-2 me-2" style="width:10px; height: 10px; border-radius: 2px;"></span>
+                          <b>Web Development:</b> Skilled in designing responsive websites using WordPress and front-end technologies.
+                      </li>
+                      <li class="d-flex pb-2 mb-1"style="text-align:justify;">
+                          <span class="bg-info mt-2 me-2" style="width:10px; height: 10px; border-radius: 2px;"></span>
+                          <b>Creative Mind:</b> Blending logic and creativity to develop seamless, user-centric solutions.
+                      </li>
+                  </ul>
+                  <div class="mt-auto">
+                      </div>
+              </div>
           </div>
-        </div>
       </div>
-    </div>
-  </section>
-
-
+  </div>
+</section>
 <section id="project" style="background-color: black;">
   <div class="container px-4 py-5" id="custom-cards">
     <h1 class="pb-2 border-bottom" style="color: white; font-family: 'Times New Roman', Times, serif;">My Projects</h1>
