--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,8 @@
     <link href="chrome-extension://eanggfilgoajaocelnaflolkadkeghjp/nj.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     </head>
-      <body>
+      <body >
+       
 <nav class="navbar navbar-expand-lg   bg-body-tertiary" >
    <div class="container-fluid  " style="background-color: black;">
      <a class="navbar-brand" href="#main" style="color: white;"><b>Portfolio</b></a>
@@ -50,8 +51,8 @@
      </div>
    </div>
 </nav> 
+ <section class="bgg" style="background-image: url(bg3.png);background-size:cover;">
 
-<div class="backgrnd"  style="background-image: url(bg2.avif);background-size:cover;";>
 <div class="container  position-relative z-5 text-center pb-5 pt-5 mt-lg-4 mt-xl-5" id="main" >
   <h2 class="display-1 pt-4 mt-sm-3 text-white"> 
     <span class="fw-normal" style="font-size: 90px; padding-left: 100px;">Hi I'm </span> 
@@ -101,7 +102,7 @@
               </div>
           </div>
       </div>
-  </div>
+  </div></section>
 </section>
 <section id="project" style="background-color: black;">
   <div class="container px-4 py-5" id="custom-cards">
