--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
     <link href="chrome-extension://eanggfilgoajaocelnaflolkadkeghjp/nj.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     </head>
-      <body >
+      <body style="width:auto;" >
        
 <nav class="navbar navbar-expand-lg   bg-body-tertiary" >
    <div class="container-fluid  " style="background-color: black;">
