--- a/portfolio.html
+++ b/portfolio.html
@@ -18,9 +18,9 @@
     <link href="chrome-extension://eanggfilgoajaocelnaflolkadkeghjp/nj.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     </head>
-      <body style="width:auto;" >
+      <body  >
        
-<nav class="navbar navbar-expand-lg   bg-body-tertiary" >
+<nav class="navbar navbar-expand-lg   bg-body-tertiary" style="width:auto;" >
    <div class="container-fluid  " style="background-color: black;">
      <a class="navbar-brand" href="#main" style="color: white;"><b>Portfolio</b></a>
      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
