--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@
              <b>My Projects</b>
            </a>
            <ul class="dropdown-menu">
-             <li><a class="dropdown-item" href="https://certifusionstudios.com">CreatiFusion Studios</a></li>
+             <li><a class="dropdown-item" href="https://creatifusionstudios.com">CreatiFusion Studios</a></li>
              <li><a class="dropdown-item" href="https://wolfarmgroup.com/">Wolfram Groups</a></li>
              <li><hr class="dropdown-divider"></li>
              <li><a class="dropdown-item" href="https://yebsys.com">Yebsys</a></li>
